kubernetes/base/apps/irc/titlerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: titlerr
  name: titlerr
  namespace: irc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: titlerr
  template:
    metadata:
      labels:
        app: titlerr
    spec:
      nodeSelector:
        opi.feature.node.kubernetes.io/5plus: "true"
      containers:
        - name: titlerr
          image: forge.internal/nemo/titlerr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      volumes:
        - name: tmp
          emptyDir: {}
