kubernetes/base/apps/irc/titlerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titlerr-ingress
  annotations:
    gethomepage.dev/description: URL title extractor
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Chat
    gethomepage.dev/icon: mdi-link-variant
    gethomepage.dev/name: Titlerr
    gethomepage.dev/pod-selector: "app=titlerr"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: titlerr.internal
spec:
  tls:
    - hosts:
      - titlerr.internal
      secretName: titlerr-ing-cert
  ingressClassName: nginx
  rules:
  - host: titlerr.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: titlerr
            port:
              number: 8080
